--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,25 +1,27 @@
-:root {
-  --color-bg: hsl(0deg 0% 100% / 8%);
-  --color-bg-accent: hsla(230, 5%, 80%, 0.08);
-  
-  --color-red: rgb(216 50 50);
-  --color-green: rgb(86 216 50);
-  --color-blue: rgb(57 123 200);
-  --color-yellow: rgb(210, 210, 49);
-  --color-turquoise: rgb(57, 201, 201);
-  --color-darkgreen: rgb(79, 138, 62);
-  --color-gray: rgb(92, 92, 92);
+$color-bg: hsl(0deg 0% 100% / 8%);
+$color-bg-accent: hsla(230, 5%, 80%, 0.08);
 
-  --color-active: rgb(214 219 31);
-}
+$color-red: rgb(216 50 50);
+$color-green: rgb(86 216 50);
+$color-blue: rgb(57 123 200);
+$color-yellow: rgb(210, 210, 49);
+$color-turquoise: rgb(57, 201, 201);
+$color-darkgreen: rgb(79, 138, 62);
+$color-gray: rgb(92, 92, 92);
+
+$color-active: rgb(214 219 31);
 
 body {
   margin: 0;
-  background-image: radial-gradient(var(--color-bg-accent) 2px, transparent 0), radial-gradient(var(--color-bg) 1px, transparent 0);
+  background-image: radial-gradient($color-bg-accent 2px, transparent 0), radial-gradient($color-bg 1px, transparent 0);
   background-size: 32px 32px, 8px 8px;
   background-position: center;
   background-color: hsl(230deg 5% 9%);
   position: relative;
+}
+
+.wrapper {
+  margin: 4vw;
 }
 
 * {
@@ -28,35 +30,27 @@ body {
 }
 
 .text {
-  font-family: Fira Sans, monospace;
-  padding-bottom: 1em;
-}
+  p {
+    font-family: Fira Code, monospace;
+    font-size: 1rem;
+    padding-bottom: 1rem;
+    margin: 0;
+  }
 
-.text > h1 {
-  font-size: 2rem;
-  padding-top: 8px;
-  padding-bottom: 32px;
-  padding-right: 32px;
-  font-weight: 500;
-  letter-spacing: 0.01em;
-  margin: 0;
-  line-height: 1;
-}
-
-.text > h2 {
-  font-size: 1rem;
-  padding: 0;
-  margin: 0;
-}
-
-.text > p {
-  padding-right: 0.1em;
-  padding-bottom: 1em;
-  margin: 0;
-  font-size: 16px;
-  line-height: 1.6;
-}
-
-.wrapper {
-  margin: 4vw;
+  h1 {
+    font-family: Fira Code, monospace;
+    font-size: 2rem;
+    font-weight: 500;
+    padding-top: 0.1rem;
+    padding-bottom: 1.5rem;
+    margin: 0;
+  }
+  
+  h2 {
+    font-family: Fira Code, monospace;
+    font-size: 1rem;
+    padding: 0;
+    margin: 0;
+    line-height: 1;
+  }
 }
